# GLame-Boy

./: .gitignore  Bus.cpp  Bus.h  CMakeLists.txt  Common.h  Cpu.cpp  Cpu.h  Emulator.cpp  Emulator.h  GLame-Boy_.sln  GLame-Boy_.vcxproj  GLame-Boy_.vcxproj.filters  GLameBoy.sln  GLameBoy.vcxproj  Ppu.cpp  Ppu.h  README.md  Registers.cpp  Registers.h  Renderer.cpp  Renderer.h  build.sh  install-vcpkg.bat  main.cpp  run-with-tests.bat  run.bat  run.sh
.github/workflows/: GTest.yml  GoogleTests.yml
Debug/: vc143.idb
Debug/GLame-Boy_.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GLame-Boy_.lastbuildstate
GoogleTest/: EmulatorTests.cpp  GoogleTest.vcxproj
GoogleTest/x64/Debug/: GoogleTest.exe.recipe  GoogleTest.vcxproj.FileListAbsolute.txt
GoogleTest/x64/Debug/GoogleTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
GoogleTests/: EmulatorTests.cpp  GoogleTests.vcxproj  InstructionsTests.cpp  TestUtils.cpp  TestUtils.h
GoogleTests/x64/Debug/: GoogleTests.exe.recipe  GoogleTests.vcxproj.FileListAbsolute.txt
GoogleTests/x64/Debug/GoogleTests.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog  GoogleTests.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
dependencies/glad/: CMakeLists.txt  glad.h
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
src/Emulator/: CMakeLists.txt
src/Emulator/include/: Bus.h  Common.h  Cpu.h  Registers.h  Renderer.h
src/Emulator/src/: Cpu.cpp  Emulator.cpp  Ppu.cpp  Registers.cpp  Renderer.cpp
src/GLameBoy/: Cpu.cpp  Renderer.h  glad.c
src/GoogleTests/: InstructionsTests.cpp
src/Main/: CMakeLists.txt
src/Tests/: CMakeLists.txt  InstructionsTests.cpp  TestUtils.cpp  TestUtils.h
src/Tests/include/: TestUtils.h
src/Tests/src/: EmulatorTests.cpp  InstructionsTests.cpp  InstructionsTests_AND.cpp  InstructionsTests_CALL.cpp  InstructionsTests_COMPLEMENT.cpp  InstructionsTests_CONTROL.cpp  InstructionsTests_LD.cpp  InstructionsTests_POP.cpp  InstructionsTests_PUSH.cpp  InstructionsTests_RET.cpp  InstructionsTests_SWAP.cpp  TestUtils.cpp
x64/Debug/: GLame-Boy_.exe.recipe  GLame-Boy_.idb  GLame-Boy_.ilk  GLame-Boy_.lib  GLame-Boy_.vcxproj.FileListAbsolute.txt  GoogleTests.exe.gta.testdurations  vc143.idb
x64/Debug/GLame-Boy_.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  GLame-Boy_.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Release/: GLame-Boy_.exe.recipe  GLame-Boy_.iobj  GLame-Boy_.ipdb  GLame-Boy_.vcxproj.FileListAbsolute.txt
x64/Release/GLame-Boy_.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GLame-Boy_.lastbuildstate  GLame-Boy_.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
